syntax = "proto3";

package calculator;
option go_package="calcpb";

message Calculation {
    int32 first_int = 1;
    int32 second_int = 2;
}

message CalculationRequest {
    Calculation calculation = 1;
}

message CalculationResponse {
   int32 result = 1;
}

service CalculationService{
    rpc Calculate(CalculationRequest) returns (CalculationResponse) {

    };
};